--- a/examples/combobox/aria1.0pattern/css/combobox-1.0.css
+++ b/examples/combobox/aria1.0pattern/css/combobox-1.0.css
@@ -17,7 +17,14 @@
 .combobox-list .group input,
 .combobox-list .group button {
   display: inline;
+  background-color: #eee;
 }
+
+.combobox-list .group input.focus {
+  background-color: #d6e8f5;
+  outline-color: #348ccb;
+}
+
 
 .combobox-list .group button {
   margin: 0;
