--- a/examples/combobox/aria1.0pattern/css/listbox.css
+++ b/examples/combobox/aria1.0pattern/css/listbox.css
@@ -1,23 +1,35 @@
-
 ul[role="listbox"] {
   margin: 0;
   padding: 0;
   position: absolute;
   top: 3em;
   list-style: none;
-  background-color: #EEEEEE;
+  background-color: #eee;
   display: none;
-  border: thin #333 solid;
+  border: 2px #333 solid;
   height: 12em;
-  width: 12em;
+  width: 10em;
   overflow: scroll;
 }
 
-ul[role="listbox"] li[role="option"]{
+ul[role="listbox"] li[role="option"] {
+  margin: 0;
+  padding: 0;
+  padding-left: 0.125em;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+}
+
+[role="listbox"].focus {
+  border-color: #348ccb;
+}
+
+
+[role="listbox"] [role="option"]{
   display: block;
   margin: 0.25em;
   padding: 0;
-  background-color: #EEEEEE;
+  background-color: #eee;
   font-size: 100%;
 }
 
@@ -32,12 +44,19 @@ input:hover {
 
 input:focus,
 input:hover {
-  background-color: #EEEEEE;
+  background-color: #eee;
 }
 
-ul[role="listbox"] li[role="option"].focus,
-ul[role="listbox"] li[role="option"]:hover{
-  background-color: black;
-  color: white;
+[role="listbox"] [role="option"][aria-selected="true"] {
+  background-color: #ccc;
+}
+
+[role="listbox"].focus [role="option"][aria-selected="true"] {
+  background-color: #aed2ea;
+  border-color: #348ccb;
+}
+
+[role="listbox"] li[role="option"]:hover {
+  background-color: #c2ddef;
 }
 
