--- a/examples/dialog-modal/css/dialog.css
+++ b/examples/dialog-modal/css/dialog.css
@@ -145,3 +145,15 @@ body:not(.toc-inline) #main_content main, body:not(.toc-inline) #main_content na
 .dialog_desc {
   padding: 10px 20px;
 }
+
+/* native <dialog> element uses the ::backdrop pseudo-element */
+dialog::backdrop,
+.dialog-backdrop {
+  position: fixed;
+  overflow-y: scroll;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  background: rgba(0, 0, 0, 0.3);
+}
