--- a/examples/css/core.css
+++ b/examples/css/core.css
@@ -39,3 +39,11 @@ table.data.attributes tbody th,
 table.data.attributes tbody td {
     border: 1px solid silver;
 }
+
+@media (min-width: 1300px) { 
+  nav.feedback {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+  } 
+}
