--- a/examples/dialog-modal/css/dialog.css
+++ b/examples/dialog-modal/css/dialog.css
@@ -147,7 +147,7 @@ body:not(.toc-inline) #main_content main, body:not(.toc-inline) #main_content na
 }
 
 /* native <dialog> element uses the ::backdrop pseudo-element */
-dialog::backdrop,
+/*dialog::backdrop,*/
 .dialog-backdrop {
   position: fixed;
   overflow-y: scroll;
