Additional fix for issue #408: hovering over a menubar item does not give it focus (unless the menubar already has focus - see issue #408 comment for explanation)
Details of change:
- added "focus" class on the menubar as a styling hook to not show hover style if menubar is focussed
- added focusin handling to menubar, and moved focusout handling up to menubar (formerly in menubar item and menu item) to support .focus styling hook
- changed menubar's setFocusToItem function to not change focus or tabindex on mouse hover, unless menubar already has focus
- added mouseover handling to menuitem to give focus to hovered item in open menu
- removed unused flag parameter from 2 functions

--- a/examples/menubar/menubar-2/css/menubarAction.css
+++ b/examples/menubar/menubar-2/css/menubarAction.css
@@ -69,6 +69,8 @@ ul[role="menubar"] [role="separator"] {
 }
 
 ul[role="menubar"] [role="menuitem"]:focus,
+ul[role="menubar"]:not(.focus) [role="menuitem"]:hover,
+ul[role="menubar"] [role="menu"] [role="menuitem"]:focus,
 ul[role="menubar"] [role="menu"] [role="menuitem"]:hover,
 ul[role="menubar"] [role="menu"] [role="menuitemcheckbox"]:focus,
 ul[role="menubar"] [role="menu"] [role="menuitemcheckbox"]:hover,
