--- a/examples/button/css/button.css
+++ b/examples/button/css/button.css
@@ -5,19 +5,17 @@
   border: 1px solid hsl(213, 71%, 49%);
   border-radius: 5px;
   box-shadow: 0 1px 2px hsl(216, 27%, 55%);
-  overflow: visible;
   color: #fff;
   text-shadow: 0 -1px 1px hsl(216, 27%, 25%);
-  background: hsl(216, 82%, 51%);
+  background-color: hsl(216, 82%, 51%);
   background-image: linear-gradient(to bottom, hsl(216, 82%, 53%), hsl(216, 82%, 47%));
 }
 
 [role="button"]:hover {
   border-color: hsl(213, 71%, 29%);
-  background: hsl(216, 82%, 31%);
+  background-color: hsl(216, 82%, 31%);
   background-image: linear-gradient(to bottom, hsl(216, 82%, 33%), hsl(216, 82%, 27%));
-	cursor: default;
-  outline: none;
+  cursor: default;
 }
 
 [role="button"]:focus {
@@ -40,7 +38,7 @@
 
 [role="button"]:active {
   border-color: hsl(213, 71%, 49%);
-  background: hsl(216, 82%, 31%);
+  background-color: hsl(216, 82%, 31%);
   background-image: linear-gradient(to bottom, hsl(216, 82%, 53%), hsl(216, 82%, 47%));
   box-shadow: inset 0 3px 5px 1px hsl(216, 82%, 30%);
 }
@@ -49,29 +47,28 @@
   border-color: hsl(261, 71%, 49%);
   box-shadow: 0 1px 2px hsl(261, 27%, 55%);
   text-shadow: 0 -1px 1px hsl(261, 27%, 25%);
-  background: hsl(261, 82%, 51%);
+  background-color: hsl(261, 82%, 51%);
   background-image: linear-gradient(to bottom, hsl(261, 82%, 53%), hsl(261, 82%, 47%));
 }
 
 [role="button"][aria-pressed]:hover {
   border-color: hsl(261, 71%, 29%);
-  background: hsl(261, 82%, 31%);
+  background-color: hsl(261, 82%, 31%);
   background-image: linear-gradient(to bottom, hsl(261, 82%, 33%), hsl(261, 82%, 27%));
-	cursor: default;
 }
 
 [role="button"][aria-pressed="true"] {
   padding-top: .5em;
   padding-bottom: .3em;
   border-color: hsl(261, 71%, 49%);
-  background: hsl(261, 82%, 31%);
+  background-color: hsl(261, 82%, 31%);
   background-image: linear-gradient(to bottom, hsl(261, 82%, 63%), hsl(261, 82%, 57%));
   box-shadow: inset 0 3px 5px 1px hsl(261, 82%, 30%);
 }
 
 [role="button"][aria-pressed="true"]:hover {
   border-color: hsl(261, 71%, 49%);
-  background: hsl(261, 82%, 31%);
+  background-color: hsl(261, 82%, 31%);
   background-image: linear-gradient(to bottom, hsl(261, 82%, 43%), hsl(261, 82%, 37%));
   box-shadow: inset 0 3px 5px 1px hsl(261, 82%, 20%);
 }
