Keep focus style on menubar item when menu is open.

--- a/examples/menubar/menubar-2/css/menubarAction.css
+++ b/examples/menubar/menubar-2/css/menubarAction.css
@@ -74,6 +74,7 @@ ul[role="menubar"]:not(.focus) [role="menuitem"]:hover {
 }
 
 ul[role="menubar"] [role="menuitem"]:focus,
+ul[role="menubar"] [role="menuitem"][aria-expanded="true"],
 ul[role="menubar"] [role="menu"] [role="menuitem"]:focus,
 ul[role="menubar"] [role="menu"] [role="menuitemcheckbox"]:focus,
 ul[role="menubar"] [role="menu"] [role="menuitemradio"]:focus {
