TRAVIS-CI update from aria-common

--- a/common/css/common.css
+++ b/common/css/common.css
@@ -105,6 +105,9 @@ caption{
 table.role-features th, table.role-features td, table.state-features th, table.state-features td, table.property-features th, table.property-features td, table.value-descriptions th, table.value-descriptions td {
 	min-width:20em;
 }
+table.role-features tbody th, table.state-features tbody th, table.property-features tbody th, table.value-descriptions tbody th {
+    text-align: left !important;
+}
 th+th, td+td{
 	width:auto;
 }
@@ -239,7 +242,6 @@ dl.compact dd {
 }
 .issue {
 	background-color:#0c0;
-	text-transform:uppercase;
 }
 abbr.symbol {
 	border-bottom:none;
