Revert core.css changes to original state

--- a/examples/css/core.css
+++ b/examples/css/core.css
@@ -22,7 +22,8 @@ pre code:not(.hljs),
   background: hsl(24, 20%, 95%);
 }
 
-kbd {
+/* Style all kbd elements that are not in table headers */
+:not(th) > kbd {
   display: inline-block;
   padding: .1em .3em;
   color: #555;
