--- a/examples/dialog-modal/css/dialog.css
+++ b/examples/dialog-modal/css/dialog.css
@@ -68,6 +68,7 @@ body:not(.toc-inline) #main_content main, body:not(.toc-inline) #main_content na
     transform: translateX(-50%);  /* move backwards 50% of this element's width */
     min-width: calc(640px - (15px * 2));  /* = breakpoint - left+right margin */
     min-height: auto;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.12), 0 15px 12px rgba(0, 0, 0, 0.22);
   }
 }
 
