--- a/examples/treeview/treeview-3/css/tree.css
+++ b/examples/treeview/treeview-3/css/tree.css
@@ -60,5 +60,8 @@ ul[role="tree"] {
 }
 #ex1-container{
   display:flex;
-  justify-content:space-around;
+  justify-content:space-between;
+}
+#tree_label, #tree_box, p {
+  margin-top:0px;
 }
