removed CSS changes

--- a/examples/menu-button/css/MenubuttonLinks.css
+++ b/examples/menu-button/css/MenubuttonLinks.css
@@ -3,20 +3,16 @@
 }
 
 .menu_button button {
-  margin: 1px;
   font-size: 110%;
   display: block;
-  padding: 0.375em;
-  border: solid 0.125em gray;
-  border-radius: 8px;
+  padding: 0.25em;
+  border: inset 2px gray;
   width: 12em;
   text-align: center;
-  background-color: #EEE;
+  background-color: #EEEEEE;
+  text-decoration: none;
   color: black;
-  outline: none;
 }
-
-
 
 ul[role="menu"] {
   margin: 0;
@@ -24,11 +20,8 @@ ul[role="menu"] {
   position: absolute;
   font-size: 110%;
 
-  border: solid 0.125em gray;
-  border-radius: 5px;
-
   list-style: none;
-  background-color: #FFF;
+  background-color: #EEEEEE;
   display: none;
 }
 
@@ -40,31 +33,25 @@ ul[role="menu"] li {
 ul[role="menu"] a[role="menuitem"],
 ul[role="menu"] a[role="menuitem"]:visited {
   display: block;
-  border: none;
   text-decoration: none;
   padding: 0.25em;
   padding-left: 0.5em;
   padding-right: 0.5em;
-  background-color: #FFF;
+  background-color: #E0E0E0;
   width: 22em;
   color: black;
-  outline: solid 0.125em transparent;
 }
 
 /* focus and hover styling */
 
-.menu_button button:focus {
-  padding: 0.25em;
-  border-width: 0.25em;
-  border-color: hsl(216, 94%, 70%);
-  background-color: hsl(216, 80%, 97%);
+a[role="button"]:focus,
+a[role="button"]:hover {
+  border: 2px solid black;
+  background-color: #F8F8F8;
 }
 
-ul[role="menu"] a[role="menuitem"]:focus {
-  outline-color: hsl(216, 94%, 70%);
-  background-color: hsl(216, 80%, 97%);
-}
-
+ul[role="menu"] a[role="menuitem"]:focus,
 ul[role="menu"] a[role="menuitem"]:hover{
-  background-color: hsl(216, 80%, 90%);
+  background-color: black;
+  color: white;
 }
