--- a/examples/treeview/multiselectable-1/css/tree.css
+++ b/examples/treeview/multiselectable-1/css/tree.css
@@ -41,28 +41,28 @@ ul[role="tree"] {
   outline: 0;
 }
 
+[role="treeitem"][aria-selected="true"] {
+  border-color: #FFF;
+  background-color: #EEE;
+  width:9em;
+}
+
+[role="treeitem"][aria-selected="true"]:after {
+  content: '*';
+}
+
 
 [role="treeitem"].focus,
-[role="treeitem"] span.focus {
+[role="treeitem"] > span.focus {
   border-color: hsl(216, 94%, 73%);
   background-color: hsl(216, 80%, 97%);
   width: 9em;
 }
 
 [role="treeitem"].hover,
-[role="treeitem"] span:hover {
+[role="treeitem"] > span:hover {
   background-color: hsl(216, 80%, 92%);;
   width: 9em;
-}
-
-[aria-selected="true"] {
-  border-color: #EEE;
-  background-color: #EEE;
-  width:9em;
-}
-
-[aria-selected="true"]:after {
-  content: '*';
 }
 
 #ex1-container{
