--- a/examples/toolbar/css/toolbar.css
+++ b/examples/toolbar/css/toolbar.css
@@ -7,16 +7,18 @@ li{
 margin: 0;
 }
 .toolbar{
-	border:1px solid black;
+	border:3px solid black;
 	border-radius:10px;
 	padding:1em;
 	display:flex;
 	justify-content: space-evenly;
+	background-color:#F5F6F6;
 }
 .group{
 	padding:0.5em;
-	border:1px solid black;
+	border:2px solid black;
 	border-radius:10px;
+	background-color:rgb(213, 218, 218);
 }
 .toolbar-item {
 	border: 1px solid black;
@@ -30,7 +32,7 @@ margin: 0;
 	font-size: 16px;
 	line-height: 1.5em;
 	/* vertical-align: top; */
-	margin-right:1em;
+	margin-right:0.5em;
 }
 /* .toolbar-item:focus {
 	border-color: hsl(216, 94%, 73%);
@@ -69,7 +71,8 @@ font-size: medium;
 font-family: sans-serif;
 }
 button[aria-pressed="true"] {
-	background:grey;
+	background:#5B616D;
+	font-weight: bold;
 }
 
 
