--- a/examples/toolbar/css/toolbar.css
+++ b/examples/toolbar/css/toolbar.css
@@ -66,7 +66,7 @@ width: 70%;
 font-size: medium;
 font-family: sans-serif;
 }
-button[aria-pressed="true"] {
+div[aria-pressed="true"] {
 	background:#5B616D;
 	font-weight: bold;
 }
