--- a/examples/datepicker/css/datepicker.css
+++ b/examples/datepicker/css/datepicker.css
@@ -1,5 +1,64 @@
+#datepicker {
+  height:16px;
+}
 #datepicker_label{
   padding:0;
-  font-size:19px;
   border:none;
+}
+#cal {
+  display:table;
+  font-size:16px;
+}
+.fa-calendar-alt {
+  color:hsl(216, 89%, 72%);
+}
+#cal .header {
+  cursor:default;
+  background-color:hsl(216, 89%, 72%);
+  height:34px;
+  /* position:relative; */
+  font-weight:bold; 
+  text-transform:uppercase;
+  color:white; 
+  display: flex;
+  justify-content: space-between;
+}
+
+#cal .header span {
+  display:inline-block;
+  line-height:34px;
+}
+
+#cal .header .button{
+ font-size:20px;
+ width:24px;
+ text-align:center;
+}
+#cal table {
+  border-collapse:collapse;
+}
+#cal td {
+  color:#2d2d2d;
+  width:30px;
+  height:30px;
+  line-height:30px;
+  text-align:center;
+  border:1px solid #e6e6e6;
+  cursor:default;
+}
+#cal #day td {
+  height:26px;
+  line-height:26px;
+  font-size:13px;
+  color:#9e9e9e;
+}
+
+#cal #cal-frame td.today {
+  background:#ededed;
+  color:#8c8c8c;
+}
+
+#cal #cal-frame td:not(.nil):hover {
+  background:hsl(216, 80%, 81%);
+  box-shadow: 0px 0px 0px;
 }
