Single-selection listbox example: Fix aria-selected bug
For issue #794, update aria-selected for single-selection listbox options on focus change in listbox/js/listbox.js:
* When not multi-selection, toggling aria-selected when option receives or loses focus.

--- a/examples/listbox/css/listbox.css
+++ b/examples/listbox/css/listbox.css
@@ -35,17 +35,13 @@
 
 [role="option"] {
 	display: block;
-	padding: 0 1em;
+	padding: 0 1em 0 1.5em;
 	position: relative;
 	line-height: 1.8em;
 }
 
 [role="option"].focused {
 	background: #bde4ff;
-}
-
-[role="option"][aria-selected] {
-	padding-left: 1.5em;
 }
 
 [role="option"][aria-selected="true"]::before {
